# ImpMapBackend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
impression_map/: manage.py
impression_map/accounts/: middle.py  urls.py  views.py
impression_map/impression_map/: asgi.py  settings.py  urls.py  wsgi.py
impression_map/impressions/: admin.py  models.py  serializers.py  urls.py  views.py
impression_map/impressions/management/commands/: clear_db.py  create_initial_data.py
impression_map/impressions/migrations/: 0001_initial.py  0002_alter_impression_description_alter_impression_title.py  0003_remove_impression_impressions_user_id_6223f5_idx_and_more.py
